# http2-client-grpc

./: Changelog.md  LICENSE  README.md  Setup.hs  helloworld.proto  http2-client-grpc.cabal  stack-lts-12.6.yaml  stack-lts-13.4.yaml  stack-nightly-2019-11-01.yaml  stack.yaml
app/: MakeRPC.hs
src/: Lib.hs
src/Network/: GRPC.hs
src/Network/GRPC/: Client.hs
src/Network/GRPC/Client/: Helpers.hs
