name:                http2-client-grpc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lucasdicioccio/http2-client-grpc#readme
license:             BSD3
license-file:        LICENSE
author:              Lucas DiCioccio
maintainer:          lucas@dicioccio.fr
copyright:           2017 Lucas DiCioccio
category:            Web
build-type:          Custom
extra-source-files:  README.md, helloworld.proto
cabal-version:       >=1.10

custom-setup
  setup-depends: base, Cabal, proto-lens-protoc

library
  hs-source-dirs:      src
  exposed-modules:     Network.GRPC
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , data-default-class
                     , http2
                     , http2-client
                     , proto-lens
                     , proto-lens-protoc
                     , text
  default-language:    Haskell2010

executable http2-client-grpc-gen
  hs-source-dirs:      app
  main-is:             MakeRPC.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , containers
                     , haskell-src-exts
                     , proto-lens
                     , proto-lens-protoc
                     , Cabal
                     , lens-family
                     , lens-labels
                     , process
                     , text
  default-language:    Haskell2010

test-suite http2-client-grpc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , http2-client-grpc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lucasdicioccio/http2-client-grpc
