name:                http2-client-grpc
version:             0.4.0.0
synopsis:            Implement gRPC-over-HTTP2 clients.
description:         Uses http2-client and proto-lens to generate client code.
homepage:            https://github.com/lucasdicioccio/http2-client-grpc#readme
license:             BSD3
license-file:        LICENSE
author:              Lucas DiCioccio
maintainer:          lucas@dicioccio.fr
copyright:           2017 Lucas DiCioccio
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.GRPC.Client
                     , Network.GRPC.Client.Helpers
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , data-default-class
                     , http2
                     , http2-client
                     , http2-grpc-types >= 0.2
                     , proto-lens
                     , proto-lens-protoc
                     , text
                     , tls
                     , zlib
  default-language:    Haskell2010

test-suite http2-client-grpc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , http2-client-grpc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lucasdicioccio/http2-client-grpc
