name:                http2-client-grpc
version:             0.5.0.2
synopsis:            Implement gRPC-over-HTTP2 clients.
description:         A gRPC over http2-client using proto-lens to generate client code.
homepage:            https://github.com/lucasdicioccio/http2-client-grpc#readme
license:             BSD3
license-file:        LICENSE
author:              Lucas DiCioccio
maintainer:          lucas@dicioccio.fr
copyright:           2017 Lucas DiCioccio
category:            Network
build-type:          Simple
extra-source-files:  README.md Changelog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.GRPC.Client
                     , Network.GRPC.Client.Helpers
  build-depends:       base >= 4.11 && < 5
                     , async >= 2.2 && < 2.3
                     , binary >= 0.8 && < 0.9
                     , bytestring >= 0.10.8 && < 0.10.9
                     , case-insensitive >= 1.2.0 && < 1.3
                     , data-default-class >= 0.1 && <0.2
                     , lens >= 4.16 && < 4.17
                     , http2 >= 1.6 && < 1.7
                     , http2-client >= 0.8 && < 0.9
                     , http2-grpc-types >= 0.3 && < 0.4
                     , proto-lens >= 0.3 && < 0.4
                     , proto-lens-protoc >= 0.3 && < 0.4
                     , text >= 1.2 && < 1.3
                     , tls >= 1.4 && < 1.5
  default-language:    Haskell2010

test-suite http2-client-grpc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , http2-client-grpc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lucasdicioccio/http2-client-grpc
